--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -32,7 +32,7 @@ on:
 jobs:
   shellcheck:
     name: shellcheck
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, self-hosted-small] 
     steps:
     - uses: actions/checkout@v2
     
