--- a/.github/workflows/shellspec.yml
+++ b/.github/workflows/shellspec.yml
@@ -29,7 +29,7 @@ jobs:
   shellspec:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [self-hosted, self-hosted-small]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
