--- a/hardware-type-library/hpe-cabinet-ex2000.yaml
+++ b/hardware-type-library/hpe-cabinet-ex2000.yaml
@@ -1,22 +1,23 @@
 ---
 manufacturer: HPE
 model: EX2000
+hardware-type: Cabinet
 slug: hpe-ex2000
 
 device-bays:
 - name: CEC Bay
   allowed:
-    slug: hpe-crayex-cabinet-environmental-controller
+    slug: [hpe-crayex-cabinet-environmental-controller]
   default:
     slug: hpe-crayex-cabinet-environmental-controller
 
 - name: Chassis 1
   allowed:
-    slug: hpe-crayex-chassis
+    slug: [hpe-crayex-chassis]
   default:
     slug: hpe-crayex-chassis
 - name: Chassis 3
   allowed:
-    slug: hpe-crayex-chassis
+    slug: [hpe-crayex-chassis]
   default:
     slug: hpe-crayex-chassis
