--- a/hardware-type-library/hpe-cabinet-ex2500-1-liquid-cooled-chassis.yaml
+++ b/hardware-type-library/hpe-cabinet-ex2500-1-liquid-cooled-chassis.yaml
@@ -1,18 +1,19 @@
 ---
 manufacturer: HPE
 model: EX2500 1 Liquid Cooled Chassis
+hardware-type: Cabinet
 slug: hpe-ex2500-1-liquid-cooled-chassis
 
 device-bays:
 - name: CEC Bay
   allowed:
-    slug: hpe-crayex-cabinet-environmental-controller
+    slug: [hpe-crayex-cabinet-environmental-controller]
   default:
     slug: hpe-crayex-cabinet-environmental-controller
 
 - name: Chassis 0
   allowed:
-    slug: hpe-crayex-chassis
+    slug: [hpe-crayex-chassis]
   default:
     slug: hpe-crayex-chassis
 
