--- a/hardware-type-library/hpe-node-crayex-ex235n.yaml
+++ b/hardware-type-library/hpe-node-crayex-ex235n.yaml
@@ -1,16 +1,18 @@
 ---
 manufacturer: HPE
 model: EX235N AMD NVIDIA accelerator blade (Grizzly Peak)
+hardware-type: NodeBlade
 slug: hpe-crayex-ex235n-compute-blade
 device-bays:
 - name: Node Card 0
   allowed:
-    slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card
+    slug: [hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card]
   default:
     slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card
 ---
 manufacturer: HPE
 model: EX235N AMD NVIDIA accelerator blade, Grizzly Peak Node Card (GPNC)
+hardware-type: NodeCard
 slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card
 interfaces:
 - name: BMC
@@ -19,17 +21,18 @@ interfaces:
 device-bays:
 - name: Node 0
   allowed: 
-    slug: hpe-crayex-ex235n-compute-node
+    slug: [hpe-crayex-ex235n-compute-node]
   default: 
     slug: hpe-crayex-ex235n-compute-node
 - name: Node 1
   allowed: 
-    slug: hpe-crayex-ex235n-compute-node
+    slug: [hpe-crayex-ex235n-compute-node]
   default: 
     slug: hpe-crayex-ex235n-compute-node
 ---
 manufacturer: HPE
 model: EX235N AMD NVIDIA accelerator compute node
+hardware-type: Node
 slug: hpe-crayex-ex235n-compute-node
 interfaces:
 - name: NMN
