--- a/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex235n.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex235n.yaml
@@ -33,7 +33,7 @@ device-bays:
 ---
 manufacturer: HPE
 model: EX235N AMD NVIDIA accelerator blade, Grizzly Peak Node BMC
-hardware-type: NodeBMC
+hardware-type: NodeController
 slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-bmc
 interfaces:
   - name: BMC
