--- a/pkg/sls-client/.swagger-codegen-ignore
+++ b/pkg/sls-client/.swagger-codegen-ignore
@@ -22,6 +22,7 @@
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
 
+api_dumpstate.go
 model_hardware.go
 model_hardware_class.go
 model_hardware_extra_properties.go
