--- a/.github/workflows/promote-prerelease.yml
+++ b/.github/workflows/promote-prerelease.yml
@@ -44,7 +44,14 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 # Also fetch git-tags
-        
+
+    - uses: actions/setup-go@v4
+    with:
+      go-version: '1.20' # The Go version to download (if necessary) and use.
+  
+    # generate updated docs from any changes made to cani codebase
+    - run: go run main.go makedocs
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
