add license and use ubuntu runners
Signed-off-by: Jacob Salmela <jacob.salmela@hpe.com>

--- a/.github/workflows/promote-release.yml
+++ b/.github/workflows/promote-release.yml
@@ -9,7 +9,7 @@ env:
   STREAM: stable
 jobs:
   Promote:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
