update hardwaretypes schema
Signed-off-by: Jacob Salmela <jacob.salmela@hpe.com>

--- a/pkg/hardwaretypes/hardware-types/schema/components.json
+++ b/pkg/hardwaretypes/hardware-types/schema/components.json
@@ -620,6 +620,25 @@
             "additionalProperties": false
         },
 
+
+        "identifications": {
+          "type": "object",
+          "additionalProperties": false,
+          "properties": {
+              "manufacturer": {
+                  "type": "string"
+              },
+              "model": {
+                  "type": "string"
+              }
+          },
+          "required": [
+              "manufacturer",
+              "model"
+          ],
+          "title": "identifications"
+        },
+
         "inventory-item": {
             "type": "object",
             "properties": {
