--- a/testdata/fixtures/cani/configs/canitest_valid_active.yml
+++ b/testdata/fixtures/cani/configs/canitest_valid_active.yml
@@ -1,4 +1,4 @@
-#!/usr/bin/env sh
+#
 # MIT License
 #
 # (C) Copyright 2023 Hewlett Packard Enterprise Development LP
@@ -20,21 +20,37 @@
 # OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
 # ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
-
-
-Describe 'cani version'
-# Fixtures location ./spec/fixtures
-FIXTURES="$SHELLSPEC_HELPERDIR/testdata/fixtures"
-
-# compare value to file content
-fixture(){
-  test "${fixture:?}" == "$( cat "$FIXTURES/$1" )"
-}
-
-It '--help'
-  When call bin/cani version --help
-  The status should equal 0
-  The stdout should satisfy fixture 'cani/version/help'
-End
-
-End
+#
+session:
+    domain_options:
+        datastore_path: ./canitestdb.json
+        log_file_path: ./canitestdb.log
+        provider: csm
+        csm_options:
+            usesimulation: true
+            insecureskipverify: true
+            apigatewaytoken: ""
+            baseurlsls: https://localhost:8443/apis/sls/v1
+            baseurlhsm: https://localhost:8443/apis/smd/hsm/v2
+            secretname: admin-client-auth
+            kubeconfig: ""
+            tokenhost: ""
+            cacertpath: ""
+            validroles:
+                - Compute
+                - Service
+                - System
+                - Application
+                - Storage
+                - Management
+            validsubroles:
+                - Worker
+                - Master
+                - Storage
+                - UAN
+                - Gateway
+                - LNETRouter
+                - Visualization
+                - UserDefined
+    domain: {}
+    active: true
