--- a/pkg/hardwaretypes/hardware-types/hpe-cabinet-ex2500-2-liquid-cooled.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-cabinet-ex2500-2-liquid-cooled.yaml
@@ -44,3 +44,7 @@ device-bays:
       slug: [hpe-crayex-chassis]
     default:
       slug: hpe-crayex-chassis
+
+provider_defaults:
+  csm:
+    Class: Hill
