--- a/pkg/hardwaretypes/hardware-types/hpe-cabinet-ex4000.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-cabinet-ex4000.yaml
@@ -79,3 +79,7 @@ device-bays:
       slug: [hpe-crayex-chassis]
     default:
       slug: hpe-crayex-chassis
+
+provider_defaults:
+  csm:
+    Class: Mountain
