--- a/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex235a.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex235a.yaml
@@ -37,6 +37,10 @@ device-bays:
       slug: [hpe-crayex-ex235a-compute-blade-bard-peak-node-card]
     default:
       slug: hpe-crayex-ex235a-compute-blade-bard-peak-node-card
+identifications:
+  # In CSM we can learn the type of a node blade based off the contents of the NodeEnclosure
+  - manufacturer: HPE
+    model: BardPeakNC
 ---
 manufacturer: HPE
 model: EX235A AMD MI200 accelerator blade, Bard Peak Node Card (BPNC)
