Flush out tests for DetermineHardwareClass

--- a/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex420.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex420.yaml
@@ -36,7 +36,7 @@ device-bays:
     allowed:
       slug: [hpe-crayex-ex420-compute-blade-castle-node-card]
     default:
-      slug: hpe-crayex-ex420-compute-blade-castle-node-card]
+      slug: hpe-crayex-ex420-compute-blade-castle-node-card
 identifications:
   # In CSM we can learn the type of a node blade based off the contents of the NodeEnclosure
   - manufacturer: HPE
