add vlan suggestions to add cabinet when --auto is passed
Signed-off-by: Jacob Salmela <jacob.salmela@hpe.com>

--- a/pkg/hardwaretypes/hardware-types/hpe-cabinet-eia-common.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-cabinet-eia-common.yaml
@@ -37,6 +37,7 @@ device-bays:
 provider_defaults:
   csm:
     Class: River
+    Ordinal: 3000
 
 ---
 manufacturer: HPE
@@ -47,3 +48,4 @@ slug: hpe-eia-chassis
 provider_defaults:
   csm:
     Class: River
+    starting_cabinet: 3000
