show procedure to fix missing HMN_MTN and NMN_MTN networks for csm provider
Signed-off-by: Jacob Salmela <jacob.salmela@hpe.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,8 @@ nav:
     - Testing: development/testing.md
     - Releasing: development/releasing.md
     - Versioning: development/versioning.md
+  - Troubleshooting:
+    - Known Errors: troubleshooting/known_errors.md
   # add everything else not included above.  Be careful, this is a catch all
   # currently being used to get all commands/ from auto-generated docs
   - ...
