--- a/pkg/hardwaretypes/hardware-types/hpe-cabinet-ex2000.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-cabinet-ex2000.yaml
@@ -33,17 +33,20 @@ device-bays:
       slug: [hpe-crayex-cabinet-environmental-controller]
     default:
       slug: hpe-crayex-cabinet-environmental-controller
+    ordinal: 0
 
   - name: Chassis 1
     allowed:
       slug: [hpe-crayex-chassis]
     default:
       slug: hpe-crayex-chassis
+    ordinal: 1
   - name: Chassis 3
     allowed:
       slug: [hpe-crayex-chassis]
     default:
       slug: hpe-crayex-chassis
+    ordinal: 3
 
 provider_defaults:
   csm:
