--- a/pkg/hardwaretypes/hardware-types/hpe-cabinet-ex2500-3-liquid-cooled.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-cabinet-ex2500-3-liquid-cooled.yaml
@@ -33,22 +33,26 @@ device-bays:
       slug: [hpe-crayex-cabinet-environmental-controller]
     default:
       slug: hpe-crayex-cabinet-environmental-controller
+    ordinal: 0
 
   - name: Chassis 0
     allowed:
       slug: [hpe-crayex-chassis]
     default:
       slug: hpe-crayex-chassis
+    ordinal: 0
   - name: Chassis 1
     allowed:
       slug: [hpe-crayex-chassis]
     default:
       slug: hpe-crayex-chassis
+    ordinal: 1
   - name: Chassis 2
     allowed:
       slug: [hpe-crayex-chassis]
     default:
       slug: hpe-crayex-chassis
+    ordinal: 2
 
 provider_defaults:
   csm:
