--- a/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex420.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex420.yaml
@@ -32,11 +32,13 @@ device-bays:
       slug: [hpe-crayex-ex420-compute-blade-castle-node-card]
     default:
       slug: hpe-crayex-ex420-compute-blade-castle-node-card
+    ordinal: 0
   - name: Node Card 1
     allowed:
       slug: [hpe-crayex-ex420-compute-blade-castle-node-card]
     default:
       slug: hpe-crayex-ex420-compute-blade-castle-node-card
+    ordinal: 1
 identifications:
   # In CSM we can learn the type of a node blade based off the contents of the NodeEnclosure
   - manufacturer: HPE
@@ -52,16 +54,19 @@ device-bays:
       slug: [hpe-crayex-ex420-compute-blade-castle-node-bmc]
     default:
       slug: hpe-crayex-ex420-compute-blade-castle-node-bmc
+    ordinal: 0
   - name: Node 0
     allowed:
       slug: [hpe-crayex-ex420-compute-node]
     default:
       slug: hpe-crayex-ex420-compute-node
+    ordinal: 0
   - name: Node 1
     allowed:
       slug: [hpe-crayex-ex420-compute-node]
     default:
       slug: hpe-crayex-ex420-compute-node
+    ordinal: 1
 ---
 manufacturer: HPE
 model: EX420 Intel Xeon compute blade, Castle Node BMC
