--- a/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex425.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex425.yaml
@@ -32,11 +32,13 @@ device-bays:
       slug: [hpe-crayex-ex425-compute-blade-windom-node-card]
     default:
       slug: hpe-crayex-ex425-compute-blade-windom-node-card
+    ordinal: 0
   - name: Node Card 1
     allowed:
       slug: [hpe-crayex-ex425-compute-blade-windom-node-card]
     default:
       slug: hpe-crayex-ex425-compute-blade-windom-node-card
+    ordinal: 1
 identifications:
   # In CSM we can learn the type of a node blade based off the contents of the NodeEnclosure
   - manufacturer: HPE
@@ -54,16 +56,19 @@ device-bays:
       slug: [hpe-crayex-ex425-compute-blade-windom-node-bmc]
     default:
       slug: hpe-crayex-ex425-compute-blade-windom-node-bmc
+    ordinal: 0
   - name: Node 0
     allowed:
       slug: [hpe-crayex-ex425-compute-node]
     default:
       slug: hpe-crayex-ex425-compute-node
+    ordinal: 0
   - name: Node 1
     allowed:
       slug: [hpe-crayex-ex425-compute-node]
     default:
       slug: hpe-crayex-ex425-compute-node
+    ordinal: 1
 ---
 manufacturer: HPE
 model: EX425 AMD EPYC compute Blade, Windom Node BMC
