--- a/spec/integration/tavern/test_add_cabinet_ex2000.tavern.yml
+++ b/spec/integration/tavern/test_add_cabinet_ex2000.tavern.yml
@@ -289,6 +289,14 @@ marks:
         - Xname
         - Parent
       vals:
+        # Existing Cabinet
+        - [x9000, s0]
+        - [x9000c1, x9000]
+        - [x9000c1b0, x9000c1]
+        - [x9000c3, x9000]
+        - [x9000c3b0, x9000c3]
+
+        # New cabinet
         - [x9001, s0]
         - [x9001c1, x9001]
         - [x9001c1b0, x9001c1]
