--- a/spec/integration/tavern/test_add_cabinet_ex2000_dryrun.tavern.yml
+++ b/spec/integration/tavern/test_add_cabinet_ex2000_dryrun.tavern.yml
@@ -285,7 +285,7 @@ test_name: ensure child hardware exists
 marks:
   # child hardware from added cabinet should exist
   - parametrize:
-      key:
+      key: 
         - Xname
         - Parent
       vals:
@@ -295,26 +295,7 @@ marks:
         - [x9000c1b0, x9000c1]
         - [x9000c3, x9000]
         - [x9000c3b0, x9000c3]
-
-        # New cabinet
-        - [x1000, s0]
-        - [x1000c0, x1000]
-        - [x1000c0b0, x1000c0]
-        - [x1000c1, x1000]
-        - [x1000c1b0, x1000c1]
-        - [x1000c2, x1000]
-        - [x1000c2b0, x1000c2]
-        - [x1000c3, x1000]
-        - [x1000c3b0, x1000c3]
-        - [x1000c4, x1000]
-        - [x1000c4b0, x1000c4]
-        - [x1000c5, x1000]
-        - [x1000c5b0, x1000c5]
-        - [x1000c6, x1000]
-        - [x1000c6b0, x1000c6]
-        - [x1000c7, x1000]
-        - [x1000c7b0, x1000c7]
-
+   
 stages: 
   - name: ensure {Xname} exists
     request:
@@ -345,8 +326,7 @@ marks:
        - NMNGateway
        - NMNVlan
       vals:
-      - [x9000, "10.104.0.0/22",  "10.104.0.1",  3000, "10.100.0.0/22",  "10.100.0.1", 2000]
-      - [x1000, "10.104.4.0/22",  "10.104.4.1",  3001, "10.100.4.0/22",  "10.100.4.1", 2001]
+      - [x9000, "10.104.0.0/22", "10.104.0.1", 3000, "10.100.0.0/22", "10.100.0.1", 2000]
 
 stages:
   - name: Verify network data for {Xname} exists in SLS Hardware
@@ -387,13 +367,11 @@ marks:
 
       vals:
       # HMN Subnets
-      - [HMN_MTN, 9000, 3000, 10.104.0.0/22,  "10.104.0.1",  "10.104.0.10",  "10.104.3.254"]
-      - [HMN_MTN, 1000, 3001, 10.104.4.0/22,  "10.104.4.1",  "10.104.4.10",  "10.104.7.254"]
-      
+      - [HMN_MTN, 9000, 3000, 10.104.0.0/22, "10.104.0.1", "10.104.0.10", "10.104.3.254"]
+
       # NMN Subnets
-      - [NMN_MTN, 9000, 2000, 10.100.0.0/22,  "10.100.0.1",  "10.100.0.10",  "10.100.3.254"]
-      - [NMN_MTN, 1000, 2001, 10.100.4.0/22,  "10.100.4.1",  "10.100.4.10",  "10.100.7.254"]
-      
+      - [NMN_MTN, 9000, 2000, 10.100.0.0/22, "10.100.0.1", "10.100.0.10", "10.100.3.254"]
+
 
 stages:
   - name: Verify network data for x9000 in SLS Network HMN_MTN
@@ -414,3 +392,26 @@ stages:
               Gateway: "{Gateway}"
               Name: "cabinet_{CabinetOrdinal}"
               VlanID: !int "{Vlan}"
+
+---
+test_name: ensure new hardware was not added due to dry run
+
+marks:
+  # child hardware from added cabinet should exist
+  - parametrize:
+      key: Xname
+      vals:
+        # Existing Cabinet
+        - x9001
+        - x9001c1
+        - x9001c1b0
+        - x9001c3
+        - x9001c3b0
+stages:
+  - name: Verify {Xname} does not exist in SLS Hardware
+    request:
+      url: "https://localhost:8443/apis/sls/v1/hardware/{Xname}"
+      method: GET
+      verify: false
+    response:
+      status_code: 404
