--- a/.github/workflows/promote-prerelease.yml
+++ b/.github/workflows/promote-prerelease.yml
@@ -53,7 +53,7 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           allowUpdates: true # if the job is re-ran to catch missed artifacts, allow updates
-          generateReleaseNotes: true
+          generateReleaseNotes: false
           artifacts: ${{ env.DIR_UPLOAD }}/*
           prerelease: true
           makeLatest: false
