--- a/spec/integration/tavern/test_add_cabinet_ex2000.tavern.yml
+++ b/spec/integration/tavern/test_add_cabinet_ex2000.tavern.yml
@@ -319,6 +319,238 @@ stages:
         Parent: "{Parent}"
 
 ---
+test_name: Ensure cabinets exist and have CANI metadata
+marks:
+  - parametrize:
+      key:
+        - Xname
+        - Parent
+        - Class
+        - CANIState
+      vals:
+        # Existing cabinets
+        - [x9000, s0, Hill, provisioned]
+
+        # New cabinets
+        - [x9001, s0, Hill, provisioned]
+
+stages: 
+  - name: ensure {Xname} exists and has cani metadata
+    request:
+      url: "{sls_base_url}/v1/hardware/{Xname}"
+      method: GET
+      verify: false
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern.helpers:validate_pykwalify
+        extra_kwargs:
+          schema:
+            type: map
+            required: True
+            mapping:
+              Parent:
+                type: str
+                required: True
+                pattern: "^{Parent}$"
+              Children:
+                type: seq
+                required: False
+                matching: all
+                sequence:
+                  - type: str
+                    pattern: "^[xs].+"
+              Xname:
+                type: str
+                required: True
+                pattern: "^{Xname}$"
+              Type:
+                type: str
+                required: True
+                pattern: "^comptype_cabinet$"
+              Class:
+                type: str
+                required: True
+                pattern: "^{Class}$"
+              TypeString:
+                type: str
+                required: True
+                pattern: "^Cabinet$"
+              LastUpdated:
+                type: int
+                required: True
+              LastUpdatedTime:
+                type: str
+                required: True
+                pattern: "^[0-9]{{4}}-[0-9]{{2}}-[0-9]{{2}} [0-9]{{2}}:[0-9]{{2}}:[0-9]{{2}}.[0-9]+ \\+[0-9]{{4}} \\+[0-9]{{4}}|[0-9]{{4}}-[0-9]{{2}}-[0-9]{{2}} [0-9]{{2}}:[0-9]{{2}}:[0-9]{{2}}.[0-9]+ \\+[0-9]{{4}} UTC$"
+              ExtraProperties:
+                type: map
+                required: False
+                allowempty: True
+                mapping:
+                  '@cani.id':
+                    type: str
+                    required: True
+                    # pattern: "^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$"
+                  '@cani.lastModified':
+                    type: str
+                    required: True
+                    # pattern: "^[0-9]{{4}}-[0-9]{{2}}-[0-9]{{2}} [0-9]{{2}}:[0-9]{{2}}:[0-9]{{2}}.[0-9]+ \\+[0-9]{{4}} \\+[0-9]{{4}}|[0-9]{{4}}-[0-9]{{2}}-[0-9]{{2}} [0-9]{{2}}:[0-9]{{2}}:[0-9]{{2}}.[0-9]+ \\+[0-9]{{4}} UTC$"
+                  '@cani.slsSchemaVersion':
+                    type: str
+                    required: True
+                    pattern: "^v1alpha1$"
+                  '@cani.status':
+                    type: str
+                    required: True
+                    enum:
+                      - "{CANIState}"
+                  Aliases:
+                    type: seq
+                    required: False
+                    matching: all
+                    sequence:
+                      - type: str
+                  Brand:
+                    type: str
+                    required: False
+                  IP4addr:
+                    type: str
+                    required: False
+                  Networks:
+                    type: map
+                    required: False
+                    allowempty: True
+                    mapping:
+                      cn:
+                        type: map
+                        required: False
+                        allowempty: True
+                        mapping:
+                          HMN:
+                            type: map
+                            required: False
+                            mapping:
+                              CIDR:
+                                type: str
+                                required: True
+                              Gateway:
+                                type: str
+                                required: True
+                              VLan:
+                                type: int
+                                required: True
+
+---
+test_name: Ensure Chassis and ChassisBMCs and exist and have CANI metadata
+marks:
+  - parametrize:
+      key:
+        - Xname
+        - Parent
+        - Class
+        - TypeString
+        - Type
+        - CANIState
+      vals:
+        #
+        # Existing cabinets
+        #
+
+        # Chassis
+        - [x9000c1, x9000, Hill, Chassis, comptype_chassis, provisioned]
+        - [x9000c3, x9000, Hill, Chassis, comptype_chassis, provisioned]
+
+        # Chassis BMCs
+        - [x9000c1b0, x9000c1, Hill, ChassisBMC, comptype_chassis_bmc, provisioned]
+        - [x9000c3b0, x9000c3, Hill, ChassisBMC, comptype_chassis_bmc, provisioned]
+
+        #
+        # New cabinets
+        #
+
+         # Chassis
+        - [x9001c1, x9001, Hill, Chassis, comptype_chassis, provisioned]
+        - [x9001c3, x9001, Hill, Chassis, comptype_chassis, provisioned]
+
+        # Chassis BMCs
+        - [x9001c1b0, x9001c1, Hill, ChassisBMC, comptype_chassis_bmc, provisioned]
+        - [x9001c3b0, x9001c3, Hill, ChassisBMC, comptype_chassis_bmc, provisioned]
+
+stages: 
+  - name: ensure {Xname} exists and has cani metadata
+    request:
+      url: "{sls_base_url}/v1/hardware/{Xname}"
+      method: GET
+      verify: false
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern.helpers:validate_pykwalify
+        extra_kwargs:
+          schema:
+            type: map
+            required: True
+            mapping:
+              Parent:
+                type: str
+                required: True
+                pattern: "^{Parent}$"
+              Children:
+                type: seq
+                required: False
+                matching: all
+                sequence:
+                  - type: str
+                    pattern: "^[xs].+"
+              Xname:
+                type: str
+                required: True
+                pattern: "^{Xname}$"
+              Type:
+                type: str
+                required: True
+                pattern: "^{Type}$"
+              Class:
+                type: str
+                required: True
+                pattern: "^{Class}$"
+              TypeString:
+                type: str
+                required: True
+                pattern: "^{TypeString}$"
+              LastUpdated:
+                type: int
+                required: True
+              LastUpdatedTime:
+                type: str
+                required: True
+                pattern: "^[0-9]{{4}}-[0-9]{{2}}-[0-9]{{2}} [0-9]{{2}}:[0-9]{{2}}:[0-9]{{2}}.[0-9]+ \\+[0-9]{{4}} \\+[0-9]{{4}}|[0-9]{{4}}-[0-9]{{2}}-[0-9]{{2}} [0-9]{{2}}:[0-9]{{2}}:[0-9]{{2}}.[0-9]+ \\+[0-9]{{4}} UTC$"
+              ExtraProperties:
+                type: map
+                required: False
+                allowempty: True
+                mapping:
+                  '@cani.id':
+                    type: str
+                    required: True
+                    # pattern: "^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$"
+                  '@cani.lastModified':
+                    type: str
+                    required: True
+                    # pattern: "^[0-9]{{4}}-[0-9]{{2}}-[0-9]{{2}} [0-9]{{2}}:[0-9]{{2}}:[0-9]{{2}}.[0-9]+ \\+[0-9]{{4}} \\+[0-9]{{4}}|[0-9]{{4}}-[0-9]{{2}}-[0-9]{{2}} [0-9]{{2}}:[0-9]{{2}}:[0-9]{{2}}.[0-9]+ \\+[0-9]{{4}} UTC$"
+                  '@cani.slsSchemaVersion':
+                    type: str
+                    required: True
+                    pattern: "^v1alpha1$"
+                  '@cani.status':
+                    type: str
+                    required: True
+                    enum:
+                      - "{CANIState}"
+
+
+---
 test_name: Verify network information in SLS Hardware
 
 marks:
