Add Blanca Peak and Antero blade hardware types

--- a/pkg/hardwaretypes/hardware-types/schema/components.json
+++ b/pkg/hardwaretypes/hardware-types/schema/components.json
@@ -633,6 +633,9 @@
               },
               "model": {
                   "type": "string"
+              },
+              "part-number": {
+                "type": "string"
               }
           },
           "required": [
