--- a/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex254n.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex254n.yaml
@@ -23,58 +23,58 @@
 #
 ---
 manufacturer: HPE
-model: EX235N NVIDIA accelerator blade (Grizzly Peak)
+model: EX254N NVIDIA GH200 Grace Hopper blade (Blanca Peak)
 hardware-type: NodeBlade
-slug: hpe-crayex-ex235n-compute-blade
+slug: hpe-crayex-ex254n-compute-blade
 device-bays:
   - name: Node Card 0
     allowed:
-      slug: [hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card]
+      slug: [hpe-crayex-ex254n-compute-blade-blanca-peak-node-card]
     default:
-      slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card
+      slug: hpe-crayex-ex254n-compute-blade-blanca-peak-node-card
     ordinal: 0
+  - name: Node Card 1
+    allowed:
+      slug: [hpe-crayex-ex254n-compute-blade-blanca-peak-node-card]
+    default:
+      slug: hpe-crayex-ex254n-compute-blade-blanca-peak-node-card
+    ordinal: 1
 identifications:
   # In CSM we can learn the type of a node blade based off the contents of the NodeEnclosure
   - manufacturer: HPE
-    model: GrizzlyPkNodeCard
+    model: BlancaPeakNC
 ---
 manufacturer: HPE
-model: EX235N NVIDIA accelerator blade, Grizzly Peak Node Card (GPNC)
+model: EX254N NVIDIA GH200 Grace Hopper, Blanca Peak Node Card (BPNC)
 hardware-type: NodeCard
-slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card
+slug: hpe-crayex-ex254n-compute-blade-blanca-peak-node-card
 device-bays:
   - name: BMC
     allowed:
-      slug: [hpe-crayex-ex235n-compute-blade-grizzly-peak-node-bmc]
+      slug: [hpe-crayex-ex254n-compute-blade-blanca-peak-node-bmc]
     default:
-      slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-bmc
+      slug: hpe-crayex-ex254n-compute-blade-blanca-peak-node-bmc
     ordinal: 0
   - name: Node 0
     allowed:
-      slug: [hpe-crayex-ex235n-compute-node]
+      slug: [hpe-crayex-ex254n-compute-node]
     default:
-      slug: hpe-crayex-ex235n-compute-node
+      slug: hpe-crayex-ex254n-compute-node
     ordinal: 0
-  - name: Node 1
-    allowed:
-      slug: [hpe-crayex-ex235n-compute-node]
-    default:
-      slug: hpe-crayex-ex235n-compute-node
-    ordinal: 1
 ---
 manufacturer: HPE
-model: EX235N NVIDIA accelerator blade, Grizzly Peak Node BMC
+model: EX254N NVIDIA GH200 Grace Hopper, Blanca Peak Node BMC
 hardware-type: NodeController
-slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-bmc
+slug: hpe-crayex-ex254n-compute-blade-blanca-peak-node-bmc
 interfaces:
   - name: BMC
     type: 1000base-t
     mgmt_only: true
 ---
 manufacturer: HPE
-model: EX235N NVIDIA accelerator compute node
+model: EX254N NVIDIA GH200 Grace Hopper compute node
 hardware-type: Node
-slug: hpe-crayex-ex235n-compute-node
+slug: hpe-crayex-ex254n-compute-node
 interfaces:
   - name: NMN
     type: 1000base-t
