--- a/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex4252.yaml
+++ b/pkg/hardwaretypes/hardware-types/hpe-node-crayex-ex4252.yaml
@@ -23,62 +23,79 @@
 #
 ---
 manufacturer: HPE
-model: EX235N NVIDIA accelerator blade (Grizzly Peak)
+model: EX4252 AMD EPYC compute blade (Antero)
 hardware-type: NodeBlade
-slug: hpe-crayex-ex235n-compute-blade
+slug: hpe-crayex-ex4252-compute-blade
 device-bays:
   - name: Node Card 0
     allowed:
-      slug: [hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card]
+      slug: [hpe-crayex-ex4252-compute-blade-antero-node-card]
     default:
-      slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card
+      slug: hpe-crayex-ex4252-compute-blade-antero-node-card
     ordinal: 0
 identifications:
   # In CSM we can learn the type of a node blade based off the contents of the NodeEnclosure
+  # EX4252
   - manufacturer: HPE
-    model: GrizzlyPkNodeCard
+    model: HSSMEZZCARD
+    part-number: P47016-002.1
+  # EX425g2 Older version of antero
+  - manufacturer: HPE
+    model: HSSMEZZCARD
+    part-number: P47016-003.A
 ---
 manufacturer: HPE
-model: EX235N NVIDIA accelerator blade, Grizzly Peak Node Card (GPNC)
+model: EX425 AMD EPYC compute Blade, Antero Node Card (WNC)
 hardware-type: NodeCard
-slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-card
+slug: hpe-crayex-ex4252-compute-blade-antero-node-card
 device-bays:
   - name: BMC
     allowed:
-      slug: [hpe-crayex-ex235n-compute-blade-grizzly-peak-node-bmc]
+      slug: [hpe-crayex-ex4252-compute-blade-antero-node-bmc]
     default:
-      slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-bmc
+      slug: hpe-crayex-ex4252-compute-blade-antero-node-bmc
     ordinal: 0
   - name: Node 0
     allowed:
-      slug: [hpe-crayex-ex235n-compute-node]
+      slug: [hpe-crayex-ex4252-compute-node]
     default:
-      slug: hpe-crayex-ex235n-compute-node
+      slug: hpe-crayex-ex4252-compute-node
     ordinal: 0
   - name: Node 1
     allowed:
-      slug: [hpe-crayex-ex235n-compute-node]
+      slug: [hpe-crayex-ex4252-compute-node]
     default:
-      slug: hpe-crayex-ex235n-compute-node
+      slug: hpe-crayex-ex4252-compute-node
     ordinal: 1
+  - name: Node 2
+    allowed:
+      slug: [hpe-crayex-ex4252-compute-node]
+    default:
+      slug: hpe-crayex-ex4252-compute-node
+    ordinal: 1
+  - name: Node 3
+    allowed:
+      slug: [hpe-crayex-ex4252-compute-node]
+    default:
+      slug: hpe-crayex-ex4252-compute-node
+    ordinal: 3
 ---
 manufacturer: HPE
-model: EX235N NVIDIA accelerator blade, Grizzly Peak Node BMC
+model: EX4252 AMD EPYC compute Blade, Antero Node BMC
 hardware-type: NodeController
-slug: hpe-crayex-ex235n-compute-blade-grizzly-peak-node-bmc
+slug: hpe-crayex-ex4252-compute-blade-antero-node-bmc
 interfaces:
   - name: BMC
     type: 1000base-t
     mgmt_only: true
 ---
 manufacturer: HPE
-model: EX235N NVIDIA accelerator compute node
+model: EX4252 AMD EPYC compute node (Antero)
 hardware-type: Node
-slug: hpe-crayex-ex235n-compute-node
+slug: hpe-crayex-ex4252-compute-node
 interfaces:
   - name: NMN
     type: 1000base-t
-
     # Single Injection or Dual Injection
     # - name: HSN 0
     # - name: HSN 1
